commit to "main"

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </ul>
         <h1>Enter to own one for yourself!!</h1>
                
-        <p>Enter and own !</p>
+        <p>If you didn't manage to buy one, don't worry, more collections are coming soon!</p>
         <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Catmmunity</span>
         </a>
