--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p class="count-text">Sec</p>
           </li>
         </ul>
-        <h1>Enter to own one for yourself!!</h1>
+        <h1>Enter to own one for yourself!</h1>
                
         <p>If you didn't manage to buy one, don't worry, more collections are coming soon!</p>
         <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
